# notes_todo_mcp

./: .gitignore  LICENSE  README.md  blog.md  pyproject.toml
notes_todo_mcp/: server.py  store.py
